# text-span

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs
