[package]
name = "text-span"
version = "1.0.0"
edition = "2024"

[features]
default = ["span-value-usize"]
span-value-usize  = []
span-value-u128   = []
span-value-u64    = []
span-value-u32    = []
span-value-u16    = []
span-value-u8     = []

[dependencies]

[dev-dependencies]
itertools = "0.14.0"