[package]
name = "text-span"
description = "Struct covering areas of text"
keywords = ["span", "text", "code", "area"]
categories = ["data-structures", "filesystem", "no-std", "no-std::no-alloc"]
version = "1.0.3"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/text-span/1.0.1"
repository = "https://github.com/DDAN-17/text-span"

[features]
default = ["span-value-usize"]
span-value-usize  = []
span-value-u128   = []
span-value-u64    = []
span-value-u32    = []
span-value-u16    = []
span-value-u8     = []

[dependencies]

[dev-dependencies]
itertools = "0.14.0"